--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 This Blog was developed during the Udacity course Web Development (CS253)
 http://www.udacity.com/overview/Course/cs253/CourseRev/apr2012
+
+The blog is up in http://ggp-helloworld.appspot.com/blog
